[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "zengshan-divination"
version = "0.1.0"
description = "A deterministic Liuyao chart and cited Zengshan Buyi divination service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.49,<1",
  "fastapi>=0.115,<1",
  "lunar-python==1.4.8",
  "openai>=1.68,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.8,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "httpx2>=2,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
]

[project.scripts]
zengshan-build-kb = "scripts.build_knowledge_base:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "error",
]

[tool.coverage.run]
branch = true
source = ["app"]
